# MyChat

./: CMakeLists.txt  README.md  autobuild.sh
include/server/: MyChatServer.hpp  MyChatService.hpp  mpublic.hpp  redis.hpp
include/server/MySQL/: AddFriendAskModel.hpp  FriendModel.hpp  GroupUserModel.hpp  MySQL.hpp  OfflineMessageModel.hpp  User.hpp  UserModel.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  MyChatServer.cpp  MyChatService.cpp  main.cpp  redis.cpp
src/server/MySQL/: AddFriendAskModel.cpp  FriendModel.cpp  GroupUserModel.cpp  MySQL.cpp  OfflineMessageModel.cpp  User.cpp  UserModel.cpp
test/ConsoleApplication1/: main.cpp
test/HelloLCP/: main  main.cpp
